Added Router and modified passive queue

--- a/TwoPhaseNetwork/omnetpp.ini
+++ b/TwoPhaseNetwork/omnetpp.ini
@@ -1,36 +1,120 @@
 [General]
 network = FourNodeNetwork
-**.sendingAlgorithm = "priority"
-**.fetchingAlgorithm = "priority"
+repeat = 20
+**.numJobs = 400
+**.scalar-recording = false
+
+
+######Config A #######
+[Config A_ext_02]
+**.Source.interArrivalTime = exponential(0.4s)
+**.jobPriority = bernoulli(0.4)
+**.PS.serviceTimeU1 = uniform(0.4s, 1.0s)
+**.PS.serviceTimeU2 = uniform(1s, 1.2s)
+**.SS1.serviceTime = exponential(0.4s)
+**.SS2.serviceTime = exponential(0.8s)
 **.Classifier.exitProbability = bernoulli(0.2)
 
-
-######Config A#######
-[Config A]
+[Config A_ext_05]
 **.Source.interArrivalTime = exponential(4s)
 **.jobPriority = bernoulli(0.4)
 **.PS.serviceTimeU1 = uniform(0.4s, 1.0s)
 **.PS.serviceTimeU2 = uniform(1s, 1.2s)
 **.SS1.serviceTime = exponential(0.4s)
 **.SS2.serviceTime = exponential(0.8s)
+**.Classifier.exitProbability = bernoulli(0.5)
 
-[Config B]
+[Config A_ext_08]
+**.Source.interArrivalTime = exponential(4s)
+**.jobPriority = bernoulli(0.4)
+**.PS.serviceTimeU1 = uniform(0.4s, 1.0s)
+**.PS.serviceTimeU2 = uniform(1s, 1.2s)
+**.SS1.serviceTime = exponential(0.4s)
+**.SS2.serviceTime = exponential(0.8s)
+**.Classifier.exitProbability = bernoulli(0.8)
+
+[Config A_ext_09]
+**.Source.interArrivalTime = exponential(4s)
+**.jobPriority = bernoulli(0.4)
+**.PS.serviceTimeU1 = uniform(0.4s, 1.0s)
+**.PS.serviceTimeU2 = uniform(1s, 1.2s)
+**.SS1.serviceTime = exponential(0.4s)
+**.SS2.serviceTime = exponential(0.8s)
+**.Classifier.exitProbability = bernoulli(0.8)
+
+######Config B #######
+[Config B_ext_02]
 **.Source.interArrivalTime = exponential(5s)
 **.jobPriority = bernoulli(0.6)
 **.PS.serviceTimeU1 = uniform(0.8s, 1.2s)
 **.PS.serviceTimeU2 = uniform(1.8s, 2.2s)
 **.SS1.serviceTime = exponential(1s)
 **.SS2.serviceTime = exponential(1.2s)
+**.Classifier.exitProbability = bernoulli(0.2)
 
-[Config C]
+[Config B_ext_05]
+**.Source.interArrivalTime = exponential(5s)
+**.jobPriority = bernoulli(0.6)
+**.PS.serviceTimeU1 = uniform(0.8s, 1.2s)
+**.PS.serviceTimeU2 = uniform(1.8s, 2.2s)
+**.SS1.serviceTime = exponential(1s)
+**.SS2.serviceTime = exponential(1.2s)
+**.Classifier.exitProbability = bernoulli(0.5)
+
+[Config B_ext_08]
+**.Source.interArrivalTime = exponential(5s)
+**.jobPriority = bernoulli(0.6)
+**.PS.serviceTimeU1 = uniform(0.8s, 1.2s)
+**.PS.serviceTimeU2 = uniform(1.8s, 2.2s)
+**.SS1.serviceTime = exponential(1s)
+**.SS2.serviceTime = exponential(1.2s)
+**.Classifier.exitProbability = bernoulli(0.8)
+
+[Config B_ext_09]
+**.Source.interArrivalTime = exponential(5s)
+**.jobPriority = bernoulli(0.6)
+**.PS.serviceTimeU1 = uniform(0.8s, 1.2s)
+**.PS.serviceTimeU2 = uniform(1.8s, 2.2s)
+**.SS1.serviceTime = exponential(1s)
+**.SS2.serviceTime = exponential(1.2s)
+**.Classifier.exitProbability = bernoulli(0.9)
+
+######Config C #######
+[Config C_ext_02]
 **.Source.interArrivalTime = exponential(6s)
 **.jobPriority = bernoulli(0.8)
 **.PS.serviceTimeU1 = uniform(1.2s, 2.0s)
 **.PS.serviceTimeU2 = uniform(2.4s, 2.8s)
 **.SS1.serviceTime = exponential(1.4s)
 **.SS2.serviceTime = exponential(2s)
+**.Classifier.exitProbability = bernoulli(0.2)
 
+[Config C_ext_05]
+**.Source.interArrivalTime = exponential(6s)
+**.jobPriority = bernoulli(0.8)
+**.PS.serviceTimeU1 = uniform(1.2s, 2.0s)
+**.PS.serviceTimeU2 = uniform(2.4s, 2.8s)
+**.SS1.serviceTime = exponential(1.4s)
+**.SS2.serviceTime = exponential(2s)
+**.Classifier.exitProbability = bernoulli(0.5)
 
+[Config C_ext_08]
+**.Source.interArrivalTime = exponential(6s)
+**.jobPriority = bernoulli(0.8)
+**.PS.serviceTimeU1 = uniform(1.2s, 2.0s)
+**.PS.serviceTimeU2 = uniform(2.4s, 2.8s)
+**.SS1.serviceTime = exponential(1.4s)
+**.SS2.serviceTime = exponential(2s)
+**.Classifier.exitProbability = bernoulli(0.8)
+
+[Config C_ext_09]
+**.Source.interArrivalTime = exponential(6s)
+**.jobPriority = bernoulli(0.8)
+**.PS.serviceTimeU1 = uniform(1.2s, 2.0s)
+**.PS.serviceTimeU2 = uniform(2.4s, 2.8s)
+**.SS1.serviceTime = exponential(1.4s)
+**.SS2.serviceTime = exponential(2s)
+**.Classifier.exitProbability = bernoulli(0.9)
 
 
 
