--- a/TwoPhaseNetwork/omnetpp.ini
+++ b/TwoPhaseNetwork/omnetpp.ini
@@ -2,10 +2,11 @@
 network = FourNodeNetwork
 repeat = 20
 **.numJobs = 400
+**.bin-recording = false
 **.scalar-recording = false
 
 
-######Config A #######
+######Config A ######################################
 [Config A_ext_02]
 **.Source.interArrivalTime = exponential(0.4s)
 **.jobPriority = bernoulli(0.4)
@@ -13,7 +14,8 @@ repeat = 20
 **.PS.serviceTimeU2 = uniform(1s, 1.2s)
 **.SS1.serviceTime = exponential(0.4s)
 **.SS2.serviceTime = exponential(0.8s)
-**.Classifier.exitProbability = bernoulli(0.2)
+**.PS.exitProbability = bernoulli(0.2)
+
 
 [Config A_ext_05]
 **.Source.interArrivalTime = exponential(0.4s)
@@ -22,7 +24,8 @@ repeat = 20
 **.PS.serviceTimeU2 = uniform(1s, 1.2s)
 **.SS1.serviceTime = exponential(0.4s)
 **.SS2.serviceTime = exponential(0.8s)
-**.Classifier.exitProbability = bernoulli(0.5)
+**.PS.exitProbability = bernoulli(0.5)
+
 
 [Config A_ext_08]
 **.Source.interArrivalTime = exponential(0.4s)
@@ -31,7 +34,8 @@ repeat = 20
 **.PS.serviceTimeU2 = uniform(1s, 1.2s)
 **.SS1.serviceTime = exponential(0.4s)
 **.SS2.serviceTime = exponential(0.8s)
-**.Classifier.exitProbability = bernoulli(0.8)
+**.PS.exitProbability = bernoulli(0.8)
+
 
 [Config A_ext_09]
 **.Source.interArrivalTime = exponential(0.4s)
@@ -40,9 +44,10 @@ repeat = 20
 **.PS.serviceTimeU2 = uniform(1s, 1.2s)
 **.SS1.serviceTime = exponential(0.4s)
 **.SS2.serviceTime = exponential(0.8s)
-**.Classifier.exitProbability = bernoulli(0.8)
+**.PS.exitProbability = bernoulli(0.9)
 
-######Config B #######
+
+######Config B ###################################
 [Config B_ext_02]
 **.Source.interArrivalTime = exponential(0.5s)
 **.jobPriority = bernoulli(0.6)
@@ -50,7 +55,8 @@ repeat = 20
 **.PS.serviceTimeU2 = uniform(1.8s, 2.2s)
 **.SS1.serviceTime = exponential(1s)
 **.SS2.serviceTime = exponential(1.2s)
-**.Classifier.exitProbability = bernoulli(0.2)
+**.PS.exitProbability = bernoulli(0.2)
+
 
 [Config B_ext_05]
 **.Source.interArrivalTime = exponential(0.5s)
@@ -59,7 +65,7 @@ repeat = 20
 **.PS.serviceTimeU2 = uniform(1.8s, 2.2s)
 **.SS1.serviceTime = exponential(1s)
 **.SS2.serviceTime = exponential(1.2s)
-**.Classifier.exitProbability = bernoulli(0.5)
+**.PS.exitProbability = bernoulli(0.5)
 
 [Config B_ext_08]
 **.Source.interArrivalTime = exponential(0.5s)
@@ -68,7 +74,7 @@ repeat = 20
 **.PS.serviceTimeU2 = uniform(1.8s, 2.2s)
 **.SS1.serviceTime = exponential(1s)
 **.SS2.serviceTime = exponential(1.2s)
-**.Classifier.exitProbability = bernoulli(0.8)
+**.PS.exitProbability = bernoulli(0.8)
 
 [Config B_ext_09]
 **.Source.interArrivalTime = exponential(0.5s)
@@ -77,7 +83,7 @@ repeat = 20
 **.PS.serviceTimeU2 = uniform(1.8s, 2.2s)
 **.SS1.serviceTime = exponential(1s)
 **.SS2.serviceTime = exponential(1.2s)
-**.Classifier.exitProbability = bernoulli(0.9)
+**.PS.exitProbability = bernoulli(0.9)
 
 ######Config C #######
 [Config C_ext_02]
@@ -87,7 +93,7 @@ repeat = 20
 **.PS.serviceTimeU2 = uniform(2.4s, 2.8s)
 **.SS1.serviceTime = exponential(1.4s)
 **.SS2.serviceTime = exponential(2s)
-**.Classifier.exitProbability = bernoulli(0.2)
+**.PS.exitProbability = bernoulli(0.2)
 
 [Config C_ext_05]
 **.Source.interArrivalTime = exponential(0.6s)
@@ -96,7 +102,7 @@ repeat = 20
 **.PS.serviceTimeU2 = uniform(2.4s, 2.8s)
 **.SS1.serviceTime = exponential(1.4s)
 **.SS2.serviceTime = exponential(2s)
-**.Classifier.exitProbability = bernoulli(0.5)
+**.PS.exitProbability = bernoulli(0.5)
 
 [Config C_ext_08]
 **.Source.interArrivalTime = exponential(0.6s)
@@ -105,7 +111,7 @@ repeat = 20
 **.PS.serviceTimeU2 = uniform(2.4s, 2.8s)
 **.SS1.serviceTime = exponential(1.4s)
 **.SS2.serviceTime = exponential(2s)
-**.Classifier.exitProbability = bernoulli(0.8)
+**.PS.exitProbability = bernoulli(0.8)
 
 [Config C_ext_09]
 **.Source.interArrivalTime = exponential(0.6s)
@@ -114,7 +120,7 @@ repeat = 20
 **.PS.serviceTimeU2 = uniform(2.4s, 2.8s)
 **.SS1.serviceTime = exponential(1.4s)
 **.SS2.serviceTime = exponential(2s)
-**.Classifier.exitProbability = bernoulli(0.9)
+**.PS.exitProbability = bernoulli(0.9)
 
 
 
