--- a/TwoPhaseNetwork/omnetpp.ini
+++ b/TwoPhaseNetwork/omnetpp.ini
@@ -1,13 +1,13 @@
 [General]
-network = FourNodeNetwork
+network = ResponseTimeNetwork
 repeat = 20
 **.numJobs = 400
 **.bin-recording = false
 **.scalar-recording = false
 
 
-######Config A ######################################
-[Config A_ext_02]
+######Config interarrival 0.4 ######################################
+[Config I4_E2]
 **.Source.interArrivalTime = exponential(0.4s)
 **.jobPriority = bernoulli(0.4)
 **.PS.serviceTimeU1 = uniform(0.4s, 1.0s)
@@ -17,7 +17,7 @@ repeat = 20
 **.PS.exitProbability = bernoulli(0.2)
 
 
-[Config A_ext_05]
+[Config I4_E5]
 **.Source.interArrivalTime = exponential(0.4s)
 **.jobPriority = bernoulli(0.4)
 **.PS.serviceTimeU1 = uniform(0.4s, 1.0s)
@@ -27,7 +27,7 @@ repeat = 20
 **.PS.exitProbability = bernoulli(0.5)
 
 
-[Config A_ext_08]
+[Config I4_E8]
 **.Source.interArrivalTime = exponential(0.4s)
 **.jobPriority = bernoulli(0.4)
 **.PS.serviceTimeU1 = uniform(0.4s, 1.0s)
@@ -37,7 +37,7 @@ repeat = 20
 **.PS.exitProbability = bernoulli(0.8)
 
 
-[Config A_ext_09]
+[Config I4_E9]
 **.Source.interArrivalTime = exponential(0.4s)
 **.jobPriority = bernoulli(0.4)
 **.PS.serviceTimeU1 = uniform(0.4s, 1.0s)
@@ -47,8 +47,8 @@ repeat = 20
 **.PS.exitProbability = bernoulli(0.9)
 
 
-######Config B ###################################
-[Config B_ext_02]
+######Config interarrival 0.5 ###################################
+[Config I5_E2]
 **.Source.interArrivalTime = exponential(0.5s)
 **.jobPriority = bernoulli(0.6)
 **.PS.serviceTimeU1 = uniform(0.8s, 1.2s)
@@ -58,7 +58,7 @@ repeat = 20
 **.PS.exitProbability = bernoulli(0.2)
 
 
-[Config B_ext_05]
+[Config I5_E5]
 **.Source.interArrivalTime = exponential(0.5s)
 **.jobPriority = bernoulli(0.6)
 **.PS.serviceTimeU1 = uniform(0.8s, 1.2s)
@@ -67,7 +67,7 @@ repeat = 20
 **.SS2.serviceTime = exponential(1.2s)
 **.PS.exitProbability = bernoulli(0.5)
 
-[Config B_ext_08]
+[Config I5_E8]
 **.Source.interArrivalTime = exponential(0.5s)
 **.jobPriority = bernoulli(0.6)
 **.PS.serviceTimeU1 = uniform(0.8s, 1.2s)
@@ -76,7 +76,7 @@ repeat = 20
 **.SS2.serviceTime = exponential(1.2s)
 **.PS.exitProbability = bernoulli(0.8)
 
-[Config B_ext_09]
+[Config I5_E9]
 **.Source.interArrivalTime = exponential(0.5s)
 **.jobPriority = bernoulli(0.6)
 **.PS.serviceTimeU1 = uniform(0.8s, 1.2s)
@@ -85,8 +85,8 @@ repeat = 20
 **.SS2.serviceTime = exponential(1.2s)
 **.PS.exitProbability = bernoulli(0.9)
 
-######Config C #######
-[Config C_ext_02]
+######Config Interarrival 0.6 #######
+[Config I6_E2]
 **.Source.interArrivalTime = exponential(0.6s)
 **.jobPriority = bernoulli(0.8)
 **.PS.serviceTimeU1 = uniform(1.2s, 2.0s)
@@ -95,7 +95,7 @@ repeat = 20
 **.SS2.serviceTime = exponential(2s)
 **.PS.exitProbability = bernoulli(0.2)
 
-[Config C_ext_05]
+[Config I6_E5]
 **.Source.interArrivalTime = exponential(0.6s)
 **.jobPriority = bernoulli(0.8)
 **.PS.serviceTimeU1 = uniform(1.2s, 2.0s)
@@ -104,7 +104,7 @@ repeat = 20
 **.SS2.serviceTime = exponential(2s)
 **.PS.exitProbability = bernoulli(0.5)
 
-[Config C_ext_08]
+[Config I6_E8]
 **.Source.interArrivalTime = exponential(0.6s)
 **.jobPriority = bernoulli(0.8)
 **.PS.serviceTimeU1 = uniform(1.2s, 2.0s)
@@ -113,7 +113,7 @@ repeat = 20
 **.SS2.serviceTime = exponential(2s)
 **.PS.exitProbability = bernoulli(0.8)
 
-[Config C_ext_09]
+[Config I6_E9]
 **.Source.interArrivalTime = exponential(0.6s)
 **.jobPriority = bernoulli(0.8)
 **.PS.serviceTimeU1 = uniform(1.2s, 2.0s)
