--- a/TwoPhaseNetwork/.qtenvrc
+++ b/TwoPhaseNetwork/.qtenvrc
@@ -1,3 +1,7 @@
+[General]
+last-configname=I4_E2
+last-runnumber=0
+
 [RunModeProfiles]
 fast-max-animation-speed=nan
 fast-max-playback-speed=1000000
