--- a/ResponseTimeNetwork/omnetpp.ini
+++ b/ResponseTimeNetwork/omnetpp.ini
@@ -1,14 +1,15 @@
 [General]
 network = ResponseTimeNetwork
 repeat = 20
-**.numJobs = 400
+sim-time-limit = 30000s
+#**.numJobs = 1000
 **.bin-recording = false
-**.scalar-recording = false
+
 
 
 ######Config interarrival 0.4 ######################################
 [Config I4_E2]
-**.Source.interArrivalTime = exponential(0.4s)
+**.Source.interArrivalTime = exponential(4s)
 **.jobPriority = bernoulli(0.4)
 **.PS.serviceTimeU1 = uniform(0.4s, 1.0s)
 **.PS.serviceTimeU2 = uniform(1s, 1.2s)
@@ -18,7 +19,7 @@ repeat = 20
 
 
 [Config I4_E5]
-**.Source.interArrivalTime = exponential(0.4s)
+**.Source.interArrivalTime = exponential(4s)
 **.jobPriority = bernoulli(0.4)
 **.PS.serviceTimeU1 = uniform(0.4s, 1.0s)
 **.PS.serviceTimeU2 = uniform(1s, 1.2s)
@@ -28,7 +29,7 @@ repeat = 20
 
 
 [Config I4_E8]
-**.Source.interArrivalTime = exponential(0.4s)
+**.Source.interArrivalTime = exponential(4s)
 **.jobPriority = bernoulli(0.4)
 **.PS.serviceTimeU1 = uniform(0.4s, 1.0s)
 **.PS.serviceTimeU2 = uniform(1s, 1.2s)
@@ -38,7 +39,7 @@ repeat = 20
 
 
 [Config I4_E9]
-**.Source.interArrivalTime = exponential(0.4s)
+**.Source.interArrivalTime = exponential(4s)
 **.jobPriority = bernoulli(0.4)
 **.PS.serviceTimeU1 = uniform(0.4s, 1.0s)
 **.PS.serviceTimeU2 = uniform(1s, 1.2s)
@@ -49,7 +50,7 @@ repeat = 20
 
 ######Config interarrival 0.5 ###################################
 [Config I5_E2]
-**.Source.interArrivalTime = exponential(0.5s)
+**.Source.interArrivalTime = exponential(5s)
 **.jobPriority = bernoulli(0.6)
 **.PS.serviceTimeU1 = uniform(0.8s, 1.2s)
 **.PS.serviceTimeU2 = uniform(1.8s, 2.2s)
@@ -59,7 +60,7 @@ repeat = 20
 
 
 [Config I5_E5]
-**.Source.interArrivalTime = exponential(0.5s)
+**.Source.interArrivalTime = exponential(5s)
 **.jobPriority = bernoulli(0.6)
 **.PS.serviceTimeU1 = uniform(0.8s, 1.2s)
 **.PS.serviceTimeU2 = uniform(1.8s, 2.2s)
@@ -68,7 +69,7 @@ repeat = 20
 **.PS.exitProbability = bernoulli(0.5)
 
 [Config I5_E8]
-**.Source.interArrivalTime = exponential(0.5s)
+**.Source.interArrivalTime = exponential(5s)
 **.jobPriority = bernoulli(0.6)
 **.PS.serviceTimeU1 = uniform(0.8s, 1.2s)
 **.PS.serviceTimeU2 = uniform(1.8s, 2.2s)
@@ -77,7 +78,7 @@ repeat = 20
 **.PS.exitProbability = bernoulli(0.8)
 
 [Config I5_E9]
-**.Source.interArrivalTime = exponential(0.5s)
+**.Source.interArrivalTime = exponential(5s)
 **.jobPriority = bernoulli(0.6)
 **.PS.serviceTimeU1 = uniform(0.8s, 1.2s)
 **.PS.serviceTimeU2 = uniform(1.8s, 2.2s)
@@ -87,7 +88,7 @@ repeat = 20
 
 ######Config Interarrival 0.6 #######
 [Config I6_E2]
-**.Source.interArrivalTime = exponential(0.6s)
+**.Source.interArrivalTime = exponential(6s)
 **.jobPriority = bernoulli(0.8)
 **.PS.serviceTimeU1 = uniform(1.2s, 2.0s)
 **.PS.serviceTimeU2 = uniform(2.4s, 2.8s)
@@ -96,7 +97,7 @@ repeat = 20
 **.PS.exitProbability = bernoulli(0.2)
 
 [Config I6_E5]
-**.Source.interArrivalTime = exponential(0.6s)
+**.Source.interArrivalTime = exponential(6s)
 **.jobPriority = bernoulli(0.8)
 **.PS.serviceTimeU1 = uniform(1.2s, 2.0s)
 **.PS.serviceTimeU2 = uniform(2.4s, 2.8s)
@@ -105,7 +106,7 @@ repeat = 20
 **.PS.exitProbability = bernoulli(0.5)
 
 [Config I6_E8]
-**.Source.interArrivalTime = exponential(0.6s)
+**.Source.interArrivalTime = exponential(6s)
 **.jobPriority = bernoulli(0.8)
 **.PS.serviceTimeU1 = uniform(1.2s, 2.0s)
 **.PS.serviceTimeU2 = uniform(2.4s, 2.8s)
@@ -114,7 +115,7 @@ repeat = 20
 **.PS.exitProbability = bernoulli(0.8)
 
 [Config I6_E9]
-**.Source.interArrivalTime = exponential(0.6s)
+**.Source.interArrivalTime = exponential(6s)
 **.jobPriority = bernoulli(0.8)
 **.PS.serviceTimeU1 = uniform(1.2s, 2.0s)
 **.PS.serviceTimeU2 = uniform(2.4s, 2.8s)
