--- a/ResponseTimeNetwork/omnetpp.ini
+++ b/ResponseTimeNetwork/omnetpp.ini
@@ -8,7 +8,7 @@ sim-time-limit = 30000s
 
 
 ######Config interarrival 0.4 ######################################
-[Config I4_E2]
+[Config First_exit_2]
 **.Source.interArrivalTime = exponential(4s)
 **.jobPriority = bernoulli(0.4)
 **.PS.serviceTimeU1 = uniform(0.4s, 1.0s)
@@ -18,7 +18,7 @@ sim-time-limit = 30000s
 **.PS.exitProbability = bernoulli(0.2)
 
 
-[Config I4_E5]
+[Config First_exit_5]
 **.Source.interArrivalTime = exponential(4s)
 **.jobPriority = bernoulli(0.4)
 **.PS.serviceTimeU1 = uniform(0.4s, 1.0s)
@@ -28,7 +28,7 @@ sim-time-limit = 30000s
 **.PS.exitProbability = bernoulli(0.5)
 
 
-[Config I4_E8]
+[Config First_exit_8]
 **.Source.interArrivalTime = exponential(4s)
 **.jobPriority = bernoulli(0.4)
 **.PS.serviceTimeU1 = uniform(0.4s, 1.0s)
@@ -38,7 +38,7 @@ sim-time-limit = 30000s
 **.PS.exitProbability = bernoulli(0.8)
 
 
-[Config I4_E9]
+[Config First_exit_9]
 **.Source.interArrivalTime = exponential(4s)
 **.jobPriority = bernoulli(0.4)
 **.PS.serviceTimeU1 = uniform(0.4s, 1.0s)
@@ -49,7 +49,7 @@ sim-time-limit = 30000s
 
 
 ######Config interarrival 0.5 ###################################
-[Config I5_E2]
+[Config Second_exit_2]
 **.Source.interArrivalTime = exponential(5s)
 **.jobPriority = bernoulli(0.6)
 **.PS.serviceTimeU1 = uniform(0.8s, 1.2s)
@@ -59,7 +59,7 @@ sim-time-limit = 30000s
 **.PS.exitProbability = bernoulli(0.2)
 
 
-[Config I5_E5]
+[Config Second_exit_5]
 **.Source.interArrivalTime = exponential(5s)
 **.jobPriority = bernoulli(0.6)
 **.PS.serviceTimeU1 = uniform(0.8s, 1.2s)
@@ -68,7 +68,7 @@ sim-time-limit = 30000s
 **.SS2.serviceTime = exponential(1.2s)
 **.PS.exitProbability = bernoulli(0.5)
 
-[Config I5_E8]
+[Config Second_exit_8]
 **.Source.interArrivalTime = exponential(5s)
 **.jobPriority = bernoulli(0.6)
 **.PS.serviceTimeU1 = uniform(0.8s, 1.2s)
@@ -77,7 +77,7 @@ sim-time-limit = 30000s
 **.SS2.serviceTime = exponential(1.2s)
 **.PS.exitProbability = bernoulli(0.8)
 
-[Config I5_E9]
+[Config Second_exit_9]
 **.Source.interArrivalTime = exponential(5s)
 **.jobPriority = bernoulli(0.6)
 **.PS.serviceTimeU1 = uniform(0.8s, 1.2s)
@@ -87,7 +87,7 @@ sim-time-limit = 30000s
 **.PS.exitProbability = bernoulli(0.9)
 
 ######Config Interarrival 0.6 #######
-[Config I6_E2]
+[Config Third_exit_2]
 **.Source.interArrivalTime = exponential(6s)
 **.jobPriority = bernoulli(0.8)
 **.PS.serviceTimeU1 = uniform(1.2s, 2.0s)
@@ -96,7 +96,7 @@ sim-time-limit = 30000s
 **.SS2.serviceTime = exponential(2s)
 **.PS.exitProbability = bernoulli(0.2)
 
-[Config I6_E5]
+[Config Third_exit_5]
 **.Source.interArrivalTime = exponential(6s)
 **.jobPriority = bernoulli(0.8)
 **.PS.serviceTimeU1 = uniform(1.2s, 2.0s)
@@ -105,7 +105,7 @@ sim-time-limit = 30000s
 **.SS2.serviceTime = exponential(2s)
 **.PS.exitProbability = bernoulli(0.5)
 
-[Config I6_E8]
+[Config Third_exit_8]
 **.Source.interArrivalTime = exponential(6s)
 **.jobPriority = bernoulli(0.8)
 **.PS.serviceTimeU1 = uniform(1.2s, 2.0s)
@@ -114,7 +114,7 @@ sim-time-limit = 30000s
 **.SS2.serviceTime = exponential(2s)
 **.PS.exitProbability = bernoulli(0.8)
 
-[Config I6_E9]
+[Config Third_exit_9]
 **.Source.interArrivalTime = exponential(6s)
 **.jobPriority = bernoulli(0.8)
 **.PS.serviceTimeU1 = uniform(1.2s, 2.0s)
